Fixed: wflow-consoleweb - Advanced Tools - Tab navigator is covered by scrollbar in Mac OS Chrome browser smaller resolution. @7.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/builder.css
+++ b/wflow-consoleweb/src/main/webapp/css/builder.css
@@ -465,6 +465,20 @@ li.jsondiffpatch-unchanged {
     line-height: 100%;
     border-radius: 0 !important;
 }
+#advancedToolsFrame .ui-tabs-nav::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+#advancedToolsFrame .ui-tabs-nav::-webkit-scrollbar:vertical {
+    width: 8px;
+}
+#advancedToolsFrame .ui-tabs-nav::-webkit-scrollbar:horizontal {
+    height: 8px;
+}
+#advancedToolsFrame .ui-tabs-nav::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    border: 0; 
+    background-color: rgba(0, 0, 0, .3);
+}
 #advancedToolsFrame .ui-tabs .ui-state-default {
     border-bottom: 2px solid transparent !important;
 }
